--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
             android:id="@+id/server_addr_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="smtp.google.com" />
+            android:hint="smtp.gmail.com" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,6 +75,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Link Start!" />
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_send_email"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="send email test" />-->
         </LinearLayout>
 
     </LinearLayout>
