--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,11 +76,11 @@
 <!--                android:layout_height="wrap_content"-->
 <!--                android:text="Link Start!" />-->
 
-<!--            <Button-->
-<!--                android:id="@+id/btn_send_email"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="send email test" />-->
+            <Button
+                android:id="@+id/btn_send_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="validate email" />
         </LinearLayout>
 
 <!--        <TextView-->
